# r2u2

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CITATION.bib  CITATION2.bib  CONTRIBUTING.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  LICENSE-SLY  LICENSE.md  Makefile  README.md  README.txt  Trace-VerdictPlotting.py  compare_sat.py  container.def  r2u2_hydra_release.tar  r2u2_updated_release.tar  r2u2prep.py  run_examples.sh  script.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: docs.yml  main.yml  release.yml
GUI/: README.md  data_process.py  requirements.txt  run.py  vtool.py
GUI/GUI_PYTHON/: MTL_main.py  Resource_Estimator.py
GUI/assets/: bWLwgP.css
GUI/c2po/: assembler.py  ast.py  c2po.py  logger.py  main.py  parser.py  rewrite.py  type.py
GUI/compiler/: ast.py  compiler.py  logger.py  parser.py  type.py
R2U2_C/: .gitignore  Makefile  parse_old.c
R2U2_C/src/: R2U2.c  R2U2.h  R2U2Config.h
R2U2_C/test/: test_at_checkers.c  test_at_compare.c  test_at_operations.c  test_function.c  test_tl.c  test_tl_queue_ft.c  (+1 more)
benchmarks/: .gitignore  benchmark.py  compiler  run_cade23.py
bvmon/: CMakeLists.txt  P0.7N5L20M64T64-1.mltl  bargraph.txt  bargraph_memory.py  bargraph_time.py  compare_output.py  future-2.mltl  future.mltl  gen_prec_chain.py  gen_trace.c  gen_trace.py  gen_trace_mmap.c  global-2.mltl  global.mltl  neg.mltl  plot-all.txt  plot.py  random_test.sh  run-old.py  run.py  run_prec_chain.sh  run_test.sh  small-2.mltl  small.mltl  until.mltl  weird.mltl  xoshiro256pp.h
bvmon/analysis/: paper-future.txt  pattern.txt  plot_future.py  plot_pattern.py
bvmon/future-2/: future-2.mltl
bvmon/output/: 10.csv  100.csv  1000.csv  10000.csv  1024.csv  16384.csv  future.csv  global_btwn_q_r.csv  min_duration.csv  prec_chain.csv  until.csv  word_size_bvmon.csv
bvmon/paper-results/future/: 1000.csv  1024.csv  5000.csv
bvmon/paper-results/pattern/: future.csv  global_btwn_q_r.csv  min_duration.csv
bvmon/patterns/: future.mltl  prec_chain.1000.mltl  prec_chain.10000.mltl  until.mltl
bvmon/patterns-7/: prec_chain.5.10.mltl
bvmon/test-n2/: future.mltl  global.mltl  until.mltl
bvmon/test-n3/: until.mltl
compiler/: README.md  c2po.py  example.csv  example.mltl  prelude.egg  pyproject.toml  r2u2prep.py  scratch.smt  setup_egglog.sh  setup_egglog_experimental.sh  syntax.md  test.py
docs/: Makefile  R2U2_Implementation.md  References.bib  api.md  conf.py  examples.md  index.md  requirements.txt  requirments.txt
egg/: Cargo.toml
events_to_traces/: README.md  preprocess.py
examples/: README.md  arrays.c2po  arrays.csv  arrays.map  atomic_checker.c2po  atomic_checker.csv  enum.csv  event.c2po  event.csv  event.map  labellen.c2po  labellen.csv  labellen.map  run_examples.sh  set_agg.c2po  simple.c2po  simple.cmd  simple_prediction.c2po  simple_prediction.csv  simple_prediction.mltl  simple_prediction_test.c2po
fomltl/: MFOTL.txt  equality.txt  future_work_mod_theories.c2po  r1.c2po  r1.csv  r1.map  r2.c2po  r4.c2po  r4.csv  r5.c2po  requirements.c2po  script.1.txt  script.2.txt  script.3.txt
monitor/: README.md
monitors/rust/r2u2_cli/: .gitignore  Cargo.toml  README.md  compiler
monitors/rust/r2u2_cli/.cargo/: config.toml
monitors/rust/r2u2_cli/src/: compile.rs  main.rs
monitors/rust/r2u2_core/: Cargo.toml  README.md  liblib.rlib
monitors/rust/r2u2_core/src/: lib.rs
monitors/rust/r2u2_core/src/engines/: booleanizer.rs  mltl.rs  mod.rs
monitors/rust/r2u2_core/src/instructions/: aux.rs  aux_info.rs  booleanizer.rs  mltl.rs  mod.rs
monitors/rust/r2u2_core/src/internals/: bounds.rs  mod.rs  process_binary.rs  types.rs
monitors/rust/r2u2_core/src/memory/: mod.rs  monitor.rs  scq.rs
monitors/static_rust/: Cargo.toml  build.rs  memory.x
monitors/static_rust/.cargo/: config.toml
monitors/static_rust/r2u2_cli/: Cargo.toml  README.md
monitors/static_rust/r2u2_cli/.cargo/: config.toml
monitors/static_rust/r2u2_cli/src/: main.rs
monitors/static_rust/r2u2_core/: Cargo.toml  README.md  memory.x
monitors/static_rust/r2u2_core/.cargo/: config.toml
monitors/static_rust/r2u2_core/src/: lib.rs  main.rs
monitors/static_rust/r2u2_core/src/engines/: booleanizer.rs  future_time.rs  mltl.rs  mod.rs
monitors/static_rust/r2u2_core/src/instructions/: booleanizer.rs  mltl.rs
monitors/static_rust/r2u2_core/src/internals/: bounds.rs  debug.rs  process_binary.rs  stm32_f3_discovery_usb_interface.rs  types.rs
monitors/static_rust/r2u2_core/src/memory/: monitor.rs  scq.rs
monitors/static_rust/r2u2_cortex_m_example/: Cargo.toml  openocd.gdb
monitors/static_rust/r2u2_cortex_m_example/.cargo/: config.toml
monitors/static_rust/r2u2_cortex_m_example/src/: main.rs
monitors/static_rust/r2u2_cortex_m_example/src/internals/: mod.rs  stm32_f3_discovery_usb_interface.rs
monitors/static_rust/src/: main.rs
monitors/static_rust/src/engines/: booleanizer.rs  future_time.rs  mod.rs
monitors/static_rust/src/instructions/: booleanizer.rs  mltl.rs  mod.rs
monitors/static_rust/src/internals/: debug.rs  mod.rs  process_binary.rs  types.rs
monitors/static_rust/src/memory/: monitor.rs  scq.rs
sabre/: analyze.sh  analyze_paper.sh  gen_trace.py  run.py
scripts/: c2po_apptainer.def  deps.def  mltlsat.py  report.py  sample.slurm  sat.def
src/: R2U2Config.h  README
test/: .gitignore  HydraReport.py  HydraSubset.py  LargeFtReport.py  LargeFtSubset.py  LargePtReport.py  LargePtSubset.py  LargeReport.py  OldFtSuiteReport.py  OldFtSuiteSubset.py  README.md  gen_c2po.py  generateRandomFormulas_MTLmax.pl  generate_tests.py  hyper_test.py  r2u2test.py  random.csv  report.py  run.py  run_all.sh  split_verdicts.sh  test_all.sh
tools/: .gitignore  argumentparser.py  formula.mltl  formula.txt  hdf5plotfunction.py  mltl2c2po.py  r2u2prep.py  r2u2test.py  taskmanager.mltl  taskmanager_expl.mltl  tasks.mltl  taskscommands.mltl  taskscommandsalt.mltl  test.mltl  test0.mltl  test1.csv  test1.mltl  test2.csv  test2.mltl  test3.mltl  test_all.py  tmp.ftasm  tmp.ftm  tmp.ftscq  vsmfsw-3946.csv  vsmfsw-3946.mltl
visualizer/: README.md
(+3073 files in other folders)
