[package]
name = "r2u2_cli"
version = "4.1.0"
authors = ["Alexis Aurandt <lexaurandt@gmail.com>"]
description = "R2U2 CLI: A stream-based runtime monitor command-line interface"
edition = "2021"
readme = "README.md"
rust-version = "1.85.1"
keywords = ["monitoring", "verification", "compiler"]
categories = ["compilers", "command-line-utilities"]
repository = "https://github.com/R2U2/r2u2/tree/rust-develop/monitors/rust/r2u2_cli"
homepage = "https://r2u2.temporallogic.org"
license = "MIT OR Apache-2.0"

[dependencies]
clap = {version = "4.0", features = ["derive", "cargo"]}
csv = "1.3.0"
pyo3 = {version = "0.27.0", features = ["auto-initialize"]}
# Uncomment the following dependency for the local version of r2u2_core
r2u2_core = {path = "../r2u2_core", features = ["aux_string_specs"]}
# Uncomment the following dependency for the public crates.io version of r2u2_core
# r2u2_core = {version = "4.1.0", features = ["aux_string_specs"]}
srfng = "1.0.1"

# this lets you use `cargo fix`!
[[bin]]
name = "r2u2_cli"
test = false
bench = false