[package]
name = "r2u2_core"
version = "4.1.0"
authors = ["Alexis Aurandt <lexaurandt@gmail.com>"]
description = "R2U2: A stream-based runtime monitor in no_std"
edition = "2021"
readme = "README.md"
rust-version = "1.85.1"
keywords = ["monitoring", "verification"]
categories = ["no-std", "embedded"]
repository = "https://github.com/R2U2/r2u2/tree/rust-develop/monitors/rust/r2u2_core"
homepage = "https://r2u2.temporallogic.org"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = { version = "1", default-features = false }
libm = "0.2.15"
cortex-m-semihosting = {version = "0.5.0", optional = true}
libc-print = {version = "0.1.23", optional = true}
const_env = "0.1.2"
fixedstr = {version = "0.5.8", features=["no-alloc"], optional = true}
vstd = {version = "0.0.0-2025-08-12-1837", default-features = false}

[features]
aux_string_specs = ["dep:fixedstr"]
debug_print_semihosting = ["dep:cortex-m-semihosting"]
debug_print_std = ["dep:libc-print"]

[lib]
name = "r2u2_core"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true