[package]
authors = ["aurandt <aurandt@iastate.edu>"]
edition = "2018"
readme = "README.md"
name = "r2u2-cli"
version = "0.1.0"

[dependencies]
csv = "1.3.0"
r2u2_core = {path = "../r2u2_core", version = "0.1.0"}

# this lets you use `cargo fix`!
[[bin]]
name = "r2u2-cli"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations