[package]
authors = ["aurandt <aurandt@iastate.edu>"]
edition = "2018"
readme = "README.md"
name = "r2u2_core"
version = "0.1.0"
categories = ["no-std", "embedded"]

[dependencies]
byteorder = { version = "1", default-features = false }
easy-min-max = "1.0.0"
libm = "0.2.8"
cortex-m-semihosting = {version = "0.5.0", optional = true}
libc-print = {version = "0.1.23", optional = true}
const_env = "0.1.2"
# prusti-contracts = "0.2.0"
vstd = { path = "../../../../verus/source/vstd"} 

[features]
default = ["configurable"]
debug_print_semihosting = ["dep:cortex-m-semihosting"]
debug_print_std = ["dep:libc-print"]
configurable = []

[lib]
name = "r2u2_core"
path = "src/lib.rs"