[package]
authors = ["Alexis Aurandt <aurandt@iastate.edu>"]
edition = "2021"
readme = "README.md"
name = "r2u2_core"
rust-version = "1.79.0"
version = "0.1.0"
keywords = ["monitoring", "verification"]
categories = ["no-std", "embedded"]
repository = "https://github.com/R2U2/r2u2/tree/rust-develop"
homepage = "https://r2u2.temporallogic.org"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = { version = "1", default-features = false }
libm = "0.2.8"
cortex-m-semihosting = {version = "0.5.0", optional = true}
libc-print = {version = "0.1.23", optional = true}
const_env = "0.1.2"
vstd = { git = "https://github.com/aaurandt/verus.git", rev = "3e21ec911f72170fcfff876e9bf39b9f478192da", default-features = false }

[features]
default = ["configurable"]
debug_print_semihosting = ["dep:cortex-m-semihosting"]
debug_print_std = ["dep:libc-print"]
configurable = []

[lib]
name = "r2u2_core"
path = "src/lib.rs"