[package]
authors = ["aurandt <aurandt@iastate.edu>"]
edition = "2018"
readme = "README.md"
name = "r2u2_cortex_m_example"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
r2u2_core = {path = "../r2u2_core", version = "0.1.0", features = ["debug_print_semihosting"]}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "r2u2_cortex_m_example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(embedded)'] }
