[package]
authors = ["aurandt <lexaurandt@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "r2u2_cortex_m_example"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.2"
panic-halt = "1.0.0"
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
switch-hal = "0.4.0"
r2u2_core = {version = "0.1.2"}

[features]
calculate_cycles = []

# this lets you use `cargo fix`!
[[bin]]
name = "r2u2_cortex_m_example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(calculate_cycles)'] }
